# openapi.yaml
@@ -1607,6 +1607,20 @@ components:
             type: object
         SettingViewPartial:
             type: object
+        SuggestedTagPartial:
+            properties:
+                ID:
+                    type: integer
+                Name:
+                    type: string
+            type: object
+        SuggestedTagsResponse:
+            properties:
+                suggestions:
+                    items:
+                        $ref: '#/components/schemas/SuggestedTagPartial'
+                    type: array
+            type: object
         Tag:
             properties:
                 CreatedAt:
@@ -5273,6 +5287,25 @@ paths:
             summary: Remove a resource from its series
             tags:
                 - series
+    /v1/resource/suggestedTags:
+        get:
+            operationId: getSuggestedTags
+            parameters:
+                - in: query
+                  name: id
+                  required: true
+                  schema:
+                    type: integer
+            responses:
+                "200":
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/SuggestedTagsResponse'
+                    description: Successful response
+            summary: Get context-aware tag suggestions for a resource
+            tags:
+                - resources
     /v1/resource/version:
         delete:
             operationId: deleteVersion
